//Clase cuenta
class Account {
    //Método constructor
    constructor(name, document) {
        // Atributos o propiedades de la clase
        this.id;
        this.name = name;
        this.document = document;
        this.email;
        this.password;
    }
}