// Clase UberBlack (Hereda de la clase carro)
class UberBlack extends Car {
    // Método constuctor de la clase
    constructor(license, driver, brand, model) {
        super(license, driver)
        // Atributos o propiedades de la clase
        this.typeAcceptedCar = typeAcceptedCar;
        this.seatsMaterial = seatsMaterial;
    }
}