// Clase UberVan (Hereda de la clase carro)
class UberVan extends Car {
    // Método constuctor de la clase
    constructor(license, driver, brand, model) {
        super(license, driver)
        // Atributos o propiedades de la clase
        this.typeAcceptedCar = typeAcceptedCar;
        this.seatsMaterial = seatsMaterial;
    }
}