// Clase Efectivo (Hereda de la clase pago)
class Cash extends Payment {
    // Atributos o propiedades de la clase
    Integer id;
}