// Clase Conductor (Hereda de la clase cuenta)
class Driver extends Account {
    // Método constructor de la clase
    public Driver(String name, String document) {
        super(name, document);
    }
}