
//Librerias
import java.util.ArrayList;

//Clase ruta
class Route {
    // Atributos o propiedades de la clase
    Integer id;
    ArrayList<Double> start;
    ArrayList<Double> end;
}