// Clase Usuario (Hereda de la clase cuenta)
class User extends Account {
    // Método constructor de la clase
    public User(String name, String document) {
        super(name, document);
    }
}