<?php
//Clase pago
class Payment
{
    // Atributos o propiedades de la clase
    public $id;
}
