@startuml
class Account {
    id : Integer
    name : String
    document : String
    email : String
    password : String
}
class Car {
    -id : Integer
    -license : String
    -driver : String
    -passenger : String
    +showDataCar() : void
    +setPassenger(Integer passenger) : void
    +getPassenger() : Integer
    +getId() : Integer
    +setId(Integer id) : void
}
class Route {
    id : Integer
    start : ArrayList<Double>
    end : ArrayList<Double>
}
class Payment {
    id : Integer
}
class User {
    id : Integer
}
class Driver {
    id : Integer
}
class Card {
    id : Integer
    number : Integer
    CVV : Integer
    date: String
}
class Paypal {
    id : Integer
    email : String
}
class Cash {
    id : Integer
}
class UberX {
    -id : Integer
    -brand : String
    -model : String
    +getId() : Integer
    +setId(Integer id) : void
}
class UberPool {
    -id : Integer
    -brand : String
    -model : String
    +getId() : Integer
    +setId(Integer id) : void
}
class UberBlack {
    -id : Integer
    -typeCarAccepted : Map<String, ArrayList<String, Integer>>
    -seatsMaterial : ArrayList<String>
    +getId() : Integer
    +setId(Integer id) : void
}
class UberVan {
    -id : Integer
    -typeCarAccepted : Map<String, ArrayList<String, Integer>>
    -seatsMaterial : ArrayList<String>
    +getId() : Integer
    +setId(Integer id) : void
}
class Trip {
    -id : Integer
    +user : User
    +car : Car
    +route : Route
    +payment : Payment
    -amount : Double
    -progress : Double
    -completed : Boolean
    +isCompleted() : Boolean
    +setCompleted(boolean completed) : void
    +getProgress() : Double
    +setProgress(double progress) : void
    +getAmount() : Double
    +setAmount(double amount) : void
    +getId() : Integer
    +setId(Integer id) : void
}
Car <|-- UberX
Car <|-- UberPool
Car <|-- UberBlack
Car <|-- UberVan
Payment <|-- Cash
Payment <|-- Card
Payment <|-- Paypal
Trip *-- Car
Trip *-- Route
Trip *-- Payment
Account <|-- Driver
Account <|-- User
User <-- Trip
Driver <-- Car
@enduml